# ft_printf_nobuff

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  main.c  pf.sh
checker/: Makefile
checker/resources/executables/: check_difference  mkfilemaker  testmaker
checker/resources/executables/testers/: test_b000  test_b001  test_b002  test_b003  test_b004  test_b005  test_b006  test_b007  test_b008  test_b009  test_b010  test_b011  test_b012  test_b013  test_b014  test_b015  test_b016  test_b017  test_b018  test_b019  test_b020  test_b021  test_b022  test_b023  test_b024  test_b025  test_b026  test_b027  test_b028  test_b029  (+147 more)
checker/resources/generated_testers/: Makefile  test_b000.c  test_b001.c  test_b002.c  test_b003.c  test_b004.c  test_b005.c  test_b006.c  test_b007.c  test_b008.c  test_b009.c  test_b010.c  test_b011.c  test_b012.c  test_b013.c  test_b014.c  test_b015.c  test_b016.c  test_b017.c  test_b018.c  test_b019.c  test_b020.c  test_b021.c  test_b022.c  test_b023.c  test_b024.c  test_b025.c  test_b026.c  test_b027.c  test_b028.c  test_b029.c  test_b030.c  test_b031.c  test_b032.c  test_b033.c  test_b034.c  test_b035.c  test_b036.c  test_b037.c  test_b038.c  (+138 more)
checker/resources/testing_results/: test_b000_ft_printf_print  test_b000_printf_print  test_b000_printf_ret  test_b001_ft_printf_ret  test_b001_printf_print  test_b001_printf_ret  test_b002_ft_printf_print  test_b003_ft_printf_print  test_b003_ft_printf_ret  test_b003_printf_print  test_b003_printf_ret  test_b004_ft_printf_print  test_b004_ft_printf_ret  test_b005_ft_printf_print  test_b005_ft_printf_ret  test_b005_printf_print  test_b005_printf_ret  test_b006_ft_printf_print  test_b006_ft_printf_ret  test_b006_printf_print  test_b006_printf_ret  test_b007_ft_printf_print  test_b007_ft_printf_ret  test_b007_printf_print  test_b007_printf_ret  test_b008_printf_ret  test_b009_printf_print  test_b010_ft_printf_print  test_b010_ft_printf_ret  test_b010_printf_print  test_b011_ft_printf_print  test_b011_printf_print  test_b012_ft_printf_print  test_b012_printf_print  test_b012_printf_ret  test_b013_printf_ret  test_b014_ft_printf_print  test_b014_ft_printf_ret  test_b014_printf_print  test_b015_ft_printf_print  (+223 more)
includes/: ft_printf.h
src/: ft_printf.c  helpers.c
src/handle/: char.c  handle.c  invalid_specifier.c  number.c  pointer.c  string.c  wchar.c  wstring.c
src/handle/integer/: decimal.c  hexademical.c  integer.c  octal.c  tmp.c
src/helpers/: buffer.c  push_chars.c
src/libft/: ft_atoi.c  ft_bzero.c  ft_d_bblsort.c  ft_d_minind.c  ft_d_sqrt.c  ft_errmsg.c  ft_gnl.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lf_pow.c  ft_ll_fact.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  (+30 more)
src/parse/: flags.c  length.c  parse.c  precision.c  width.c
